@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-19T00:38:36Z",
-  "count_outdated" : 1259,
-  "uniques_outdated" : 781,
-  "count" : 1276,
-  "uniques" : 798,
+  "timestamp" : "2025-03-20T00:37:51Z",
+  "count_outdated" : 1260,
+  "uniques_outdated" : 782,
+  "count" : 1277,
+  "uniques" : 799,
   "clones" : [
-    {
-      "timestamp": "2025-03-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-06T00:00:00Z",
       "count": 3,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-03-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
