@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-03-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-06T00:00:00Z",
       "count": 3,
       "uniques": 3
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-03-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
