@@ -1,3 +1,12 @@
+2025-03-20T00:37:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13959463783 # 599
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-20
+* notice: last 14d: unq all: 7 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 781 1259 / 798 1276
+* notice: next accum: outdated-unq outdated-all / unq all: 782 1260 / 799 1277
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-03-05] / [2025-03-19]
+
 2025-03-19T00:38:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13936266747 # 598
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-19
